--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ img {
 }
 .header {
   border-bottom: 1px solid #E7E9FC;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -60,6 +61,20 @@ img {
   display: flex;
   gap: 40px;
   align-items: center;
+}
+.header-menu-item {
+  color: #404bbf;
+  position: relative;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-menu-item::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf; 
+  border-radius: 2px; 
 }
   .header-logo-black {
     color:#2E2F42;
@@ -110,6 +125,9 @@ padding: 24px 0;
   padding-bottom: 24px;
   margin-left: auto;
 }
+.header-address-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
   .header-address-link {
     color: #434455;
 font-size: 16px;
@@ -123,8 +141,15 @@ letter-spacing: 0.02em;
   }
   .solutions {
     background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+    url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
+    max-width: 1440px;
+    margin: 0 auto;
   }
 
   .solutions-title {
@@ -155,6 +180,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 border: none;
 min-width: 169px;
 height: 56px;
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .solutions-btn:hover,
   .solutions-btn:focus {
@@ -167,6 +193,15 @@ height: 56px;
   .benefits-list {
     display: flex;
     gap: 24px;
+  }
+  .benefits-icon {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
   }
   .benefits-list-item {
     width: calc((100% - 24px * 3) / 4);
@@ -195,6 +230,7 @@ letter-spacing: 0.02em;
     display: flex;
     gap: 24px;
   }
+  
   .team-img {
   }
   .worker {
@@ -231,7 +267,33 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
+padding-bottom: 8px;
   }
+  .social-networks {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+  .social-networks-item {
+    width: 40px;
+    height: 40px;
+
+  }
+  .social-networks-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+  }
+  .social-networks-icon {
+    fill: #f4f4fd;
+  }
+
+  
   .portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -268,6 +330,30 @@ margin-bottom: 72px;
   .portfolio-list-item {
 background: var(--WHITE, #FFF);
 width: calc((100% - 24px * 2) / 3);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transform: translateY(0%);
+
+  }
+  .portfolio-list-item :hover {
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  }
+  .portfolio-descr {
+    position: relative;
+    overflow: hidden;
+  }
+  .descr-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5; 
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .portfolio-item-text {
     color:#434455;
