--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 border: none;
 min-width: 169px;
 height: 56px;
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .solutions-btn:hover,
   .solutions-btn:focus {
@@ -288,6 +288,10 @@ padding-bottom: 8px;
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+  }
+  .social-networks-link:hover,
+  .social-networks-link:focus {
+    background-color: #404bbf; 
   }
   .social-networks-icon {
     fill: #f4f4fd;
