--- a/css/styles.css
+++ b/css/styles.css
@@ -365,7 +365,13 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.02em;
   }
   .footer {
-    padding: 100px 0 100px
+    padding: 100px 0 100px;
+    background: #2E2F42;
+  }
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    
   }
   .footer-logo-white {
     color: #f4f4fd;
@@ -396,9 +402,7 @@ max-width: 264px;
 margin-top: 17.5px;
   }
  
-  .footer {
-    background: #2E2F42;
-  }
+
   .header-address {
     font-style: normal;
   }
