--- a/css/styles.css
+++ b/css/styles.css
@@ -339,11 +339,19 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .portfolio-list-item:hover {
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
-  .portfolio-descr {
+  
+  .portfolio-item-text {
+    color:#434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+  .app-descr {
     position: relative;
     overflow: hidden;
   }
-  .descr-text {
+  .app-descr-text {
     position: absolute;
     top: 0;
     font-size: 16px;
@@ -351,18 +359,11 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.02em;
     color: #f4f4fd;
     padding: 40px 32px;
-    background-color: #4d5ae5; 
-    height: 100%;
+    background-color: #4d5ae5;
     width: 100%;
+    height: 100%;
     transform: translateY(100%);
-     
-  }
-  .portfolio-item-text {
-    color:#434455;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
     padding: 100px 0 100px;
@@ -371,7 +372,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .footer-container {
     display: flex;
     align-items: baseline;
-    
+
   }
   .footer-logo-white {
     color: #f4f4fd;
