--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
+    
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
@@ -373,6 +373,9 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: baseline;
 
+  }
+  .footer-info {
+    margin-right: 120px;
   }
   .footer-logo-white {
     color: #f4f4fd;
@@ -402,7 +405,15 @@ letter-spacing: 0.02em;
 max-width: 264px;
 margin-top: 17.5px;
   }
- 
+ .social-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+  
+ }
 
   .header-address {
     font-style: normal;
