--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,10 @@ letter-spacing: 0.02em;
 max-width: 264px;
 margin-top: 17.5px;
   }
+  .footer-social-media {
+    display: flex;
+    gap: 16px; 
+  }
  .social-media {
   font-weight: 500;
   font-size: 16px;
@@ -412,7 +416,11 @@ margin-top: 17.5px;
   letter-spacing: 0.02em;
   color: #FFFFFF;
   margin-bottom: 16px;
-  
+
+ }
+ .social-media-link:hover,
+ .social-media-link:focus {
+  background-color: #31d0aa;
  }
 
   .header-address {
