--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ padding-bottom: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .social-networks-link:hover,
   .social-networks-link:focus {
@@ -417,6 +417,20 @@ margin-top: 17.5px;
   color: #FFFFFF;
   margin-bottom: 16px;
 
+ }
+ .social-media-item {
+  width: 40px;
+  height: 40px;
+ }
+ .social-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .social-media-link:hover,
  .social-media-link:focus {
