--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
