--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
   gap: 40px;
   align-items: center;
 }
-.header-menu-link {
+.header-menu-item {
   color: #404bbf;
   position: relative;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -337,6 +337,7 @@ width: calc((100% - 24px * 2) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .portfolio-list-item:hover {
+    transform: translateY(100%);
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
   
