--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
   gap: 40px;
   align-items: center;
 }
-.header-menu-item {
+.header-menu-link {
   color: #404bbf;
   position: relative;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
