--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,6 @@ width: calc((100% - 24px * 2) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .portfolio-list-item:hover {
-    transform: translateY(100%);
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
   
@@ -364,7 +363,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);  
   }
   .footer {
     padding: 100px 0 100px;
