--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ padding: 24px 0;
   }
   .current {
     color: #404BBF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   current::after {
@@ -133,7 +134,7 @@ display: none;
   margin-left: auto;
 }
 .header-address-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
   .header-address-link {
     color: #434455;
