--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
     padding: 100px 0 100px;
