--- a/css/styles.css
+++ b/css/styles.css
@@ -112,19 +112,20 @@ padding: 24px 0;
   }
   .current {
     color: #404BBF;
+    position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  current::after {
-    content: "";
-    height: 48px;
-    width: 4px;
+  .current::after {
+    display: block;
+    height: 4px;
+    width: 100%;
     border-radius: 2px;
 background: #404BBF;
 position: absolute;
+content: "";
 left: 0;
 bottom: -1px;
-display: none;
   }
 .header-address-list {
   display: flex;
@@ -344,11 +345,14 @@ margin-bottom: 72px;
 background: var(--WHITE, #FFF);
 width: calc((100% - 24px * 2) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
-  .portfolio-list-item:hover {
+  .portfolio-list-item:hover, {
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
-  
+  .portfolio-list-item:hover .app-descr-text {
+    transform: translateY(100%);
+  }
   .portfolio-item-text {
     color:#434455;
     font-size: 16px;
@@ -371,7 +375,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
