--- a/css/styles.css
+++ b/css/styles.css
@@ -345,10 +345,9 @@ margin-bottom: 72px;
 background: var(--WHITE, #FFF);
 width: calc((100% - 24px * 2) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   }
-  .portfolio-list-item:hover, {
-    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  .portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); ;
   }
   .portfolio-list-item:hover .app-descr-text {
     transform: translateY(100%);
@@ -362,7 +361,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .app-descr {
     position: relative;
-    overflow: hidden;
+    overflow: hidden; 
   }
   .app-descr-text {
     position: absolute;
@@ -371,10 +370,11 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    padding: 40px 32px;
+    padding: 40px 32px; 
     background-color: #4d5ae5;
+    height: 100%; 
     width: 100%;
-    height: 100%;
+    transform: translateY(100%); 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .footer {
