--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
-padding-bottom: 8px;
+margin-bottom: 8px;
   }
   .social-networks {
     display: flex;
